[package]
name = "phala-types"
version = "0.3.0"
authors = ["h4x3rotab <h4x3rotab@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", default-features = false, optional = true }
codec = { package = "parity-scale-codec", version = "2.2", default-features = false, features = ["full"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false, optional = true }

trie-storage = { path = "../trie-storage", default-features = false, optional = true  }
phala-mq = { path = "../phala-mq", default-features = false }

[features]
default = ["std", "pruntime", "enable_serde"]
std = [
	"serde/std",
	"codec/std",
	"full_crypto",
	"sp-runtime/std",
	"trie-storage/serde",
]
enable_serde = [
	"serde/derive",
	"serde/alloc",
]
pruntime = [
	"sp-runtime",
	"trie-storage",
]
sgx = [
	"trie-storage/sgx",
    "full_crypto",
]
full_crypto = [
    "sp-core/full_crypto",
]
